swen430as1/tests/valid/trycatch/TryCatch_Valid_12.while
type Exception is { int code }

void main() {
    try {
	assert false;
    } catch(Exception e) {
	// assertion failure
	assert e.code == 3;
    }
}
