swen430as1/tests/invalid/trycatch/TryCatch_Invalid_15.while
int f(int x) {
    throw false;
    // this is dead code
    return 3;
}